<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_pilz_demo</name>
  <version>0.0.1</version>
  <description>Demonstration of Pilz Industrial Motion Planner in MoveIt with Universal Robots</description>

  <maintainer email="ravi2008joshi@gmail.com">Ravi Joshi</maintainer>
  <author email="ravi2008joshi@gmail.com">Ravi Joshi</author>
  
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometric_shapes</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_visual_tools</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
